StyleSheet.css
  @font-face { font-family: oyh_human; src: url('Oyh_human-Regular.ttf'); } 
  @font-face { font-family: computer; src: url('Computer_Text.ttf'); } 
  
body {
  background-color: rgb(23, 23, 23);
  margin: 0px;
  background-image: url('finalsupernova.png');
  color: white
}

h1 {
  font-family: oyh_human;
  color: rgb(255, 255, 255);
  font-size: 40px;
  text-align: center;
  margin-left: auto;
  margin-right: auto;
}

p {
    font-family: computer;
    font-size: 20px;
    color: #aaaaaa;
}

li {
  text-align: center;
  font-family: computer;
  font-size: 25px;
  color: #aaaaaa;        
}

/* LOGO STUFF */
.center-logo {
  margin-left: auto;
  padding-top: 15px;
  margin-right: auto;
  padding-bottom: 15px;
  width: 40vw;
}

.center-href {
  margin-left: auto;
  padding-top: 15px;
  margin-right: auto;
  padding-bottom: 15px;

}

.logo{
  background-color:rgba(0, 0, 0, 0.25); 
  text-align: center;

}

footer {
  text-align: center;
  padding: 100px;
  background-color: Black;
  color: white;
}

/* NAVBAR STUFF */
.navbar {
  overflow: hidden;
  background-color: rgba(0, 0, 0, 0.25);
  display:flex; 
  justify-content:center;
}

.navbar a {
  float: left;
  font-size: 30px;
  color: white;
  text-align: center;
  padding: 14px 16px;
  text-decoration: none;
  font-family: computer;   
  width: 25vw;
}
.navbar a.active {
  color: #00ff00;
}
/* DROPDOWN STUFF */
.dropdown {
  float: left;
  overflow: hidden;
  text-align: center;
}
.dropdown .dropbtn {
  font-size: 30px;  
  border: none;
  outline: none;
  color: white;
  padding: 14px 16px;
  background-color: inherit;
  font-family: computer;   
  width: 25vw;
  cursor: pointer;
}

.dropdown .dropbtn-active {
  font-size: 30px;  
  border: none;
  outline: none;
  color: rgb(0, 255, 0);
  padding: 14px 16px;
  background-color: inherit;
  font-family: computer;   
  width: 25vw;
}


.navbar a:hover, .dropdown:hover .dropbtn {
  color: #00aa00;
}

.dropdown-content {
  display: none;
  position: absolute;
  background-color: hwb(0 13% 87%);
  min-width: 160px;
  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.25);
  z-index: 1;
  width: 25vw;

}

.dropdown-content a {
  float: none;
  color: white;
  padding: 12px 16px;
  text-decoration: none;
  display: block;
  text-align: center;
}

.dropdown-content a:hover {
  background-color: #ddd;
  color: #000000;
  border-radius: 8px;
}

.dropdown:hover .dropdown-content {
  display: block;
  border-radius: 8px;
}

/* BUTTON STUFF */
.button {
  background-color: #4CAF50;
  border: none;
  color: white;
  padding: 15px 32px;
  text-align: center;
  text-decoration: none;
  display: inline-block;
  font-size: 16px;
  cursor: pointer;
  border-radius: 8px;
  font-family:computer; 
  font-size:20px; 
}

.button:hover{
  color:grey;
}

.container { 
  height: 25px;
  position: relative;
}

.button-holder{
  flex-direction: row-reverse;
  position: relative;
  display: flex;
  justify-content: center;
}

.cntr {
  margin: 0;
  position: absolute;
  top: 50%;
  left: 50%;
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
}

.cntr2 {
  margin: 0;
  top: 50%;
  left: 50%;
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
}

/* VIDEO STUFF */
.main {
  display: flex;
  justify-content: center;
  align-items: center;

}

.GamesList{
  display: flex;
  justify-content: space-evenly;
  flex-wrap: wrap;
  align-items: center;
  column-gap: 2px;
  row-gap: 2px;
}

.rightIMG{
  float:right;
  width: 40vw;
  height: 22.5vw;
}

video {
  width: 100%;
  height: 100%;
}

.videoSection {
  flex-basis: 45%;
  width: 40vw;
  height: 30vw;
}

.videoSection2 {
  flex-basis: 45%;
  width: 40vw;
  height: 30vw;
}

.videoSection3 {
  flex-basis: 45%;
  width: 40vw;
  height: 30vw;
}

.textSection{
  flex-basis: 45%;
}

.textSection2{
  flex-basis: 45%;
}

.textSection3{
  flex-basis: 45%;
}

/* Image Stuff */
.row {
  display: -ms-flexbox; /* IE10 */
  display: flex;
  -ms-flex-wrap: wrap; /* IE10 */
  flex-wrap: wrap;
  padding: 0 4px;
}

/* Create four equal columns that sits next to each other */
.column {
  -ms-flex: 25%; /* IE10 */
  flex: 25%;
  max-width: 100%;
  padding: 0 4px;
}

.column img {
  margin-top: 8px;
  vertical-align: middle;
  width: 100%;
}  

@media screen and (max-width: 800px) {
  .navbar {
    width: 100%;
    height: auto;
    position: relative;
    flex-direction: column;
  }
  .navbar a {    
    width:auto; 
  }
  .dropdown{
    width:auto; 
  }
  div.content {
    margin-left: 0;
  }
  div.content-header {
    margin-left: 0px;
    Background-Color: Black;  

  }
  .main{
    flex-direction: column-reverse;
    align-items: normal;
    justify-content: center;
  }
  .section{
    width: 90%;
  }
  .rightIMG{
    float: none;
    width: 85vw;
    height: 48vw;
    padding-left: 20px;
  }
  .button{
  /*   padding-top:5px; 
      margin-top:5px;*/
  } 
  .dropdown-content {
    width: 100vw;
  }
}

@media screen and (max-width: 600px) {
  .center-logo {
    width: 60vw;
  }
  .main{
    flex-direction: column-reverse;
  }
  .button-holder{
    margin-bottom: 80px;
  }
  .GamesList{
    flex-direction: column;
  }
  .textSection{
    order: 2;
    padding: 10px;
  }
  .textSection2{
    order: 4;
    padding: 10px;
  }
  .textSection3{
    order: 6;
    padding: 10px;    
  }
  .videoSection{
    order: 1;
    width:auto;
    padding: 5px;
  }
  .videoSection2{
    order: 3;
    width:auto;
    padding: 5px;
  }
  .videoSection3{
    order: 5;
    width:auto;
    padding: 5px;
  }
  .button-holder{
    text-align: right;
  }
}

